Migrate from Kotlin synthetics to Jetpack view binding

--- a/MoreAppsLib/build.gradle
+++ b/MoreAppsLib/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-parcelize'
 
 android {
-    compileSdkVersion 29
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 29
+        compileSdkVersion android_compile_sdk_version
+        targetSdkVersion android_target_sdk_version
         versionCode 101
         versionName "1.1"
 
@@ -31,14 +31,13 @@ android {
         jvmTarget = JavaVersion.VERSION_1_8
     }
 
-    androidExtensions {
-        experimental = true
+    buildFeatures {
+        viewBinding true
     }
 }
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
